- Creación del proyecto SwaggerVersion para ayudar a Swagger con la gestión de documentación referente a las distintas versiones que pueda haber del microservicio. - Se cambia la estructura de los controladores para que Swagger pueda gestionar la documentación de los mismos. - Se crea una versión 1.1 y 2.0 del controlador de productos para comprobar el correcto funcionamiento de Swagger.

--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Products_CRUD_Microservice.Constants.Products\Products_CRUD_Microservice.Constants.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Models.Products\Products_CRUD_Microservice.Models.Products.csproj" />
+    <ProjectReference Include="..\Products_CRUD_Microservice.SwaggerVersion\Products_CRUD_Microservice.SwaggerVersion.csproj" />
   </ItemGroup>
 
 </Project>
