- Creación del proyecto de interfaces para los repositorios. - Creación del repositorio de productos con dos funciones para buscar productos y una para crear productos.

--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\Products_CRUD_Microservice.DbContexts.Products\Products_CRUD_Microservice.DbContexts.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Migrations.Products\Products_CRUD_Microservice.Migrations.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Models.Products\Products_CRUD_Microservice.Models.Products.csproj" />
+    <ProjectReference Include="..\Products_CRUD_Microservice.Repository.Products\Products_CRUD_Microservice.Repository.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.SwaggerVersion\Products_CRUD_Microservice.SwaggerVersion.csproj" />
   </ItemGroup>
 
