--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.Repository.Products/Products_CRUD_Microservice.Repository.Products.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.Repository.Products/Products_CRUD_Microservice.Repository.Products.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Products_CRUD_Microservice.DbContexts.Products\Products_CRUD_Microservice.DbContexts.Products.csproj" />
+    <ProjectReference Include="..\Products_CRUD_Microservice.Repository\Products_CRUD_Microservice.Repository.csproj" />
   </ItemGroup>
 
 </Project>
