- Creación del proyecto de servicios. - Creación del proyecto de servicio de productos. - Se ha incluido el uso del AutoMapper. - Se ha realizado la primera prueba GET con la versión 1.0 de productos.

--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6">
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Products-CRUD_Microservice.Services.Products\Products-CRUD_Microservice.Services.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Constants.Products\Products_CRUD_Microservice.Constants.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.DbContexts.Products\Products_CRUD_Microservice.DbContexts.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Migrations.Products\Products_CRUD_Microservice.Migrations.Products.csproj" />
