- Creación del proyecto "Utils" con una extensión "Json" para serializar y deserializar objetos. - Se ha implementado el Ilogger para el repositorio de productos.

--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/Products-CRUD_Microservice.csproj
@@ -9,12 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -26,6 +28,7 @@
     <ProjectReference Include="..\Products_CRUD_Microservice.Models.Products\Products_CRUD_Microservice.Models.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Repository.Products\Products_CRUD_Microservice.Repository.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.SwaggerVersion\Products_CRUD_Microservice.SwaggerVersion.csproj" />
+    <ProjectReference Include="..\Products_CRUD_Microservice.Utils\Products_CRUD_Microservice.Utils.csproj" />
   </ItemGroup>
 
 </Project>
