--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.Repository.Products/Products_CRUD_Microservice.Repository.Products.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.Repository.Products/Products_CRUD_Microservice.Repository.Products.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Products_CRUD_Microservice.DbContexts.Products\Products_CRUD_Microservice.DbContexts.Products.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Repository\Products_CRUD_Microservice.Repository.csproj" />
+    <ProjectReference Include="..\Products_CRUD_Microservice.Utils\Products_CRUD_Microservice.Utils.csproj" />
   </ItemGroup>
 
 </Project>
