--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/appsettings.json
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/appsettings.json
@@ -2,7 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "RoundTheCode.Logging.Controllers": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Microsoft": "Trace"
+      }
     }
   },
   "AllowedHosts": "*",
