- Se cambia el nombre del proyecto principal de "Products_CRUD_Microservice" a "Products_CRUD_Microservice.API.Products".

--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/Products_CRUD_Microservice.API.Products.csproj
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/Products_CRUD_Microservice.API.Products.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Products_CRUD_Microservice</RootNamespace>
+    <RootNamespace>Products_CRUD_Microservice.API.Products</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
