--- a/Products-CRUD_Microservice/Products-CRUD_Microservice/Properties/launchSettings.json
+++ b/Products-CRUD_Microservice/Products-CRUD_Microservice/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Products_CRUD_Microservice": {
+    "Products_CRUD_Microservice.API.Products": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
