- Se elimina el controlador y el modelo que había con la creación del proyecto.

--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.API.Products/Products_CRUD_Microservice.API.Products.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.API.Products/Products_CRUD_Microservice.API.Products.csproj
@@ -31,4 +31,6 @@
     <ProjectReference Include="..\Products_CRUD_Microservice.Utils\Products_CRUD_Microservice.Utils.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
