--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.API/Products_CRUD_Microservice.API.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.API/Products_CRUD_Microservice.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Products_CRUD_Microservice.Exceptions\Products_CRUD_Microservice.Exceptions.csproj" />
+  </ItemGroup>
+
 </Project>
