--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.API/Products_CRUD_Microservice.API.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.API/Products_CRUD_Microservice.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Products_CRUD_Microservice.Exceptions\Products_CRUD_Microservice.Exceptions.csproj" />
+    <ProjectReference Include="..\Products_CRUD_Microservice.Utils\Products_CRUD_Microservice.Utils.csproj" />
   </ItemGroup>
 
 </Project>
