--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.API/Products_CRUD_Microservice.API.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.API/Products_CRUD_Microservice.API.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ApiExplorer" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Products_CRUD_Microservice.API.Models\Products_CRUD_Microservice.API.Models.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Exceptions\Products_CRUD_Microservice.Exceptions.csproj" />
     <ProjectReference Include="..\Products_CRUD_Microservice.Utils\Products_CRUD_Microservice.Utils.csproj" />
   </ItemGroup>
