--- a/Products-CRUD_Microservice/Products_CRUD_Microservice.Services/Products_CRUD_Microservice.Services.csproj
+++ b/Products-CRUD_Microservice/Products_CRUD_Microservice.Services/Products_CRUD_Microservice.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Products_CRUD_Microservice.Utils\Products_CRUD_Microservice.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
